--- a/JS Core/14_RegExp Advanced/Home1/index.html
+++ b/JS Core/14_RegExp Advanced/Home1/index.html
@@ -15,7 +15,7 @@
         <span>Password</span><input type="password" class="password" placeholder="Enter password">
         <span>Email address</span><input type="text" class="email" placeholder="Enter email">
         <p class="first"><span class="warn">Заповніть всі поля</span><input type="submit" value="Add user" class="add-user"></p>
-        <p class="two"><input type="submit" value="Edit user" class="edit-user"></p>
+        <p class="two"><input type="submit" value="Edit user" class="edit-user" onclick="saveEditUser()"></p>
     </div>
     <div class="right">
         <table class="table">
@@ -28,6 +28,7 @@
                 <th class="th">Delete</th>
             </tr>
         </table>
+        <table class="table1"></table>
     </div>
 </div>
 
